# isaaclab-detb

./: .gitignore  AGENTS.md  CODEOWNERS  CONTRIBUTING.md  EXECUTION_GUIDE.md  HANDOFF.md  LICENSE  Operator_Instructions.md  PLAN-v1.1.md  README.md  SECURITY.md  claude.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
configs/: base.yaml
configs/analysis/: default.yaml
configs/fault/: latency.yaml  nominal.yaml  torque_derate.yaml
configs/robot/: anymal_c.yaml  anymal_c_simple_actuator.yaml
configs/sensor/: depth_forward.yaml  proprio.yaml  raycaster.yaml
configs/study/: baseline.yaml  sweep.yaml
configs/task/: flat_walk.yaml  flat_walk_simple_actuator.yaml  flat_walk_stability.yaml
configs/terrain/: flat_eval.yaml  gentle_slopes.yaml  mixed_obstacles.yaml  rough.yaml  stairs.yaml
detb/: __init__.py  artifacts.py  cli.py  config.py  evidence.py  extension.py  io.py  models.py  pipeline.py  stats.py
detb/backends/: __init__.py  isaaclab_backend.py  mock_backend.py
docs/: architecture.md  bootstrap.md  cli.md  data-contracts.md  modules.md  permissions.md  reproducibility.md  terrain-design.md  terrain-research.md  v1-acceptance-checklist.md
scripts/: detb.py  detb_isaaclab_common.py  detb_isaaclab_eval.py  detb_isaaclab_play.py  detb_isaaclab_train.py  dev_session.ps1  run_with_detb_lab.py
source/detb_lab/: README.md  setup.py
tests/: test_cli.py  test_extension.py  test_io.py  test_isaaclab_backend.py  test_pipeline.py  test_runtime.py  test_stats.py
(+27 files in other folders)
